// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MediaLibraryCard > should match snapshot for draft image 1`] = `
<DocumentFragment>
  <div
    class="css-sz7bhe"
    tabindex="-1"
  >
    <div
      class="css-t4oi0l"
    >
      <p
        class="css-1m7ygk3"
        data-testid="draft-text"
      >
        Draft
      </p>
      <img
        class="css-1qtgfye"
        loading="lazy"
        src="url"
      />
    </div>
    <p
      class="css-1xa07ta"
    >
      image.png
    </p>
  </div>
</DocumentFragment>
`;

exports[`MediaLibraryCard > should match snapshot for non draft image 1`] = `
<DocumentFragment>
  <div
    class="css-sz7bhe"
    tabindex="-1"
  >
    <div
      class="css-t4oi0l"
    >
      <img
        class="css-1qtgfye"
        loading="lazy"
        src="url"
      />
    </div>
    <p
      class="css-1xa07ta"
    >
      image.png
    </p>
  </div>
</DocumentFragment>
`;

exports[`MediaLibraryCard > should match snapshot for non viewable image 1`] = `
<DocumentFragment>
  <div
    class="css-sz7bhe"
    tabindex="-1"
  >
    <div
      class="css-t4oi0l"
    >
      <div
        class="css-3wpsvl"
        data-testid="card-file-icon"
      >
        Not Viewable
      </div>
    </div>
    <p
      class="css-1xa07ta"
    >
      image.png
    </p>
  </div>
</DocumentFragment>
`;
